BCC_BCC36B__P[1]__Noemi_1563882_AnaliseSintatica_01/implementação/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     lista_declaracoes -> error
Rule 5     declaracao -> declaracao_variaveis
Rule 6     declaracao -> inicializacao_variaveis
Rule 7     declaracao -> declaracao_funcao
Rule 8     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 9     declaracao_variaveis -> tipo DOIS_PONTOS error
Rule 10    inicializacao_variaveis -> atribuicao
Rule 11    lista_variaveis -> lista_variaveis VIRGULA var
Rule 12    lista_variaveis -> var
Rule 13    var -> ID
Rule 14    var -> ID indice
Rule 15    indice -> indice ABRE_COL expressao FECHA_COL
Rule 16    indice -> ABRE_COL expressao FECHA_COL
Rule 17    indice -> indice ABRE_COL error FECHA_COL
Rule 18    indice -> ABRE_COL error FECHA_COL
Rule 19    indice -> error FECHA_COL
Rule 20    indice -> ABRE_COL error
Rule 21    indice -> indice error FECHA_COL
Rule 22    indice -> indice ABRE_COL error
Rule 23    tipo -> INTEIRO
Rule 24    tipo -> FLUTUANTE
Rule 25    declaracao_funcao -> tipo cabecalho
Rule 26    declaracao_funcao -> cabecalho
Rule 27    cabecalho -> ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
Rule 28    cabecalho -> ID ABRE_PAR lista_parametros FECHA_PAR corpo error
Rule 29    lista_parametros -> lista_parametros VIRGULA parametro
Rule 30    lista_parametros -> parametro
Rule 31    lista_parametros -> vazio
Rule 32    parametro -> tipo DOIS_PONTOS ID
Rule 33    parametro -> parametro ABRE_COL FECHA_COL
Rule 34    corpo -> corpo acao
Rule 35    corpo -> vazio
Rule 36    acao -> expressao
Rule 37    acao -> declaracao_variaveis
Rule 38    acao -> se
Rule 39    acao -> repita
Rule 40    acao -> leia
Rule 41    acao -> escreva
Rule 42    acao -> retorna
Rule 43    se -> SE expressao ENTAO corpo FIM
Rule 44    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 45    se -> SE expressao error corpo FIM
Rule 46    se -> error SENAO corpo FIM
Rule 47    repita -> REPITA corpo ATE expressao
Rule 48    repita -> REPITA corpo error
Rule 49    atribuicao -> var ATRIBUT expressao
Rule 50    leia -> LEIA ABRE_PAR var FECHA_PAR
Rule 51    escreva -> ESCREVA ABRE_PAR expressao FECHA_PAR
Rule 52    retorna -> RETORNA ABRE_PAR expressao FECHA_PAR
Rule 53    expressao -> expressao_logica
Rule 54    expressao -> atribuicao
Rule 55    expressao_logica -> expressao_simples
Rule 56    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 57    expressao_simples -> expressao_aditiva
Rule 58    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 59    expressao_aditiva -> expressao_multiplicativa
Rule 60    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 61    expressao_multiplicativa -> expressao_unaria
Rule 62    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 63    expressao_unaria -> fator
Rule 64    expressao_unaria -> operador_soma fator
Rule 65    expressao_unaria -> operador_negacao fator
Rule 66    operador_relacional -> MENOR
Rule 67    operador_relacional -> MAIOR
Rule 68    operador_relacional -> IGUAL
Rule 69    operador_relacional -> DIFERENCA
Rule 70    operador_relacional -> MENOR_IGUAL
Rule 71    operador_relacional -> MAIOR_IGUAL
Rule 72    operador_soma -> SOMA
Rule 73    operador_soma -> SUB
Rule 74    operador_negacao -> NEGACAO
Rule 75    operador_logico -> E_LOGICO
Rule 76    operador_logico -> OU_LOGICO
Rule 77    operador_multiplicacao -> MULT
Rule 78    operador_multiplicacao -> DIVISAO
Rule 79    fator -> ABRE_COL expressao FECHA_COL
Rule 80    fator -> var
Rule 81    fator -> chamada_funcao
Rule 82    fator -> numero
Rule 83    numero -> INTEIRO
Rule 84    numero -> FLUTUANTE
Rule 85    numero -> NOTACAO_CIENTIFICA
Rule 86    chamada_funcao -> ID ABRE_PAR lista_argumentos FECHA_PAR
Rule 87    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 88    lista_argumentos -> expressao
Rule 89    lista_argumentos -> vazio
Rule 90    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COL             : 15 16 17 18 20 22 33 79
ABRE_PAR             : 27 28 50 51 52 86
ATE                  : 47
ATRIBUT              : 49
DIFERENCA            : 69
DIVISAO              : 78
DOIS_PONTOS          : 8 9 32
ENTAO                : 43 44
ESCREVA              : 51
E_LOGICO             : 75
FECHA_COL            : 15 16 17 18 19 21 33 79
FECHA_PAR            : 27 28 50 51 52 86
FIM                  : 27 43 44 45 46
FLUTUANTE            : 24 84
ID                   : 13 14 27 28 32 86
IGUAL                : 68
INTEIRO              : 23 83
LEIA                 : 50
MAIOR                : 67
MAIOR_IGUAL          : 71
MENOR                : 66
MENOR_IGUAL          : 70
MULT                 : 77
NEGACAO              : 74
NOTACAO_CIENTIFICA   : 85
OU_LOGICO            : 76
REPITA               : 47 48
RETORNA              : 52
SE                   : 43 44 45
SENAO                : 44 46
SOMA                 : 72
SUB                  : 73
VIRGULA              : 11 29 87
error                : 4 9 17 18 19 20 21 22 28 45 46 48

Nonterminals, with rules where they appear

acao                 : 34
atribuicao           : 10 54
cabecalho            : 25 26
chamada_funcao       : 81
corpo                : 27 28 34 43 44 44 45 46 47 48
declaracao           : 2 3
declaracao_funcao    : 7
declaracao_variaveis : 5 37
escreva              : 41
expressao            : 15 16 36 43 44 45 47 49 51 52 79 87 88
expressao_aditiva    : 57 58 60
expressao_logica     : 53 56
expressao_multiplicativa : 59 60 62
expressao_simples    : 55 56 58
expressao_unaria     : 61 62
fator                : 63 64 65
indice               : 14 15 17 21 22
inicializacao_variaveis : 6
leia                 : 40
lista_argumentos     : 86 87
lista_declaracoes    : 1 2
lista_parametros     : 27 28 29
lista_variaveis      : 8 11
numero               : 82
operador_logico      : 56
operador_multiplicacao : 62
operador_negacao     : 65
operador_relacional  : 58
operador_soma        : 60 64
parametro            : 29 30 33
programa             : 0
repita               : 39
retorna              : 42
se                   : 38
tipo                 : 8 9 25 32
var                  : 11 12 49 50 80
vazio                : 31 35 89

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) lista_declaracoes -> . error
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . inicializacao_variaveis
    (7) declaracao -> . declaracao_funcao
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (9) declaracao_variaveis -> . tipo DOIS_PONTOS error
    (10) inicializacao_variaveis -> . atribuicao
    (25) declaracao_funcao -> . tipo cabecalho
    (26) declaracao_funcao -> . cabecalho
    (23) tipo -> . INTEIRO
    (24) tipo -> . FLUTUANTE
    (49) atribuicao -> . var ATRIBUT expressao
    (27) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (28) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo error
    (13) var -> . ID
    (14) var -> . ID indice

    error           shift and go to state 4
    INTEIRO         shift and go to state 11
    FLUTUANTE       shift and go to state 10
    ID              shift and go to state 12

    declaracao_variaveis           shift and go to state 1
    declaracao                     shift and go to state 2
    lista_declaracoes              shift and go to state 3
    cabecalho                      shift and go to state 5
    var                            shift and go to state 13
    programa                       shift and go to state 6
    declaracao_funcao              shift and go to state 7
    tipo                           shift and go to state 8
    atribuicao                     shift and go to state 14
    inicializacao_variaveis        shift and go to state 9

state 1

    (5) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 5 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 5 (declaracao -> declaracao_variaveis .)


state 2

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 3

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . inicializacao_variaveis
    (7) declaracao -> . declaracao_funcao
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (9) declaracao_variaveis -> . tipo DOIS_PONTOS error
    (10) inicializacao_variaveis -> . atribuicao
    (25) declaracao_funcao -> . tipo cabecalho
    (26) declaracao_funcao -> . cabecalho
    (23) tipo -> . INTEIRO
    (24) tipo -> . FLUTUANTE
    (49) atribuicao -> . var ATRIBUT expressao
    (27) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (28) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo error
    (13) var -> . ID
    (14) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 11
    FLUTUANTE       shift and go to state 10
    ID              shift and go to state 12

    declaracao_variaveis           shift and go to state 1
    declaracao                     shift and go to state 15
    cabecalho                      shift and go to state 5
    var                            shift and go to state 13
    declaracao_funcao              shift and go to state 7
    tipo                           shift and go to state 8
    atribuicao                     shift and go to state 14
    inicializacao_variaveis        shift and go to state 9

state 4

    (4) lista_declaracoes -> error .

    INTEIRO         reduce using rule 4 (lista_declaracoes -> error .)
    FLUTUANTE       reduce using rule 4 (lista_declaracoes -> error .)
    ID              reduce using rule 4 (lista_declaracoes -> error .)
    $end            reduce using rule 4 (lista_declaracoes -> error .)


state 5

    (26) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 26 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 26 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 26 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 26 (declaracao_funcao -> cabecalho .)


state 6

    (0) S' -> programa .



state 7

    (7) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 7 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 7 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 7 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 7 (declaracao -> declaracao_funcao .)


state 8

    (8) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (9) declaracao_variaveis -> tipo . DOIS_PONTOS error
    (25) declaracao_funcao -> tipo . cabecalho
    (27) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (28) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo error

    DOIS_PONTOS     shift and go to state 18
    ID              shift and go to state 17

    cabecalho                      shift and go to state 16

state 9

    (6) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 6 (declaracao -> inicializacao_variaveis .)


state 10

    (24) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 24 (tipo -> FLUTUANTE .)
    ID              reduce using rule 24 (tipo -> FLUTUANTE .)


state 11

    (23) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 23 (tipo -> INTEIRO .)
    ID              reduce using rule 23 (tipo -> INTEIRO .)


state 12

    (27) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (28) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo error
    (13) var -> ID .
    (14) var -> ID . indice
    (15) indice -> . indice ABRE_COL expressao FECHA_COL
    (16) indice -> . ABRE_COL expressao FECHA_COL
    (17) indice -> . indice ABRE_COL error FECHA_COL
    (18) indice -> . ABRE_COL error FECHA_COL
    (19) indice -> . error FECHA_COL
    (20) indice -> . ABRE_COL error
    (21) indice -> . indice error FECHA_COL
    (22) indice -> . indice ABRE_COL error

    ABRE_PAR        shift and go to state 20
    ATRIBUT         reduce using rule 13 (var -> ID .)
    ABRE_COL        shift and go to state 19
    error           shift and go to state 22

    indice                         shift and go to state 21

state 13

    (49) atribuicao -> var . ATRIBUT expressao

    ATRIBUT         shift and go to state 23


state 14

    (10) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 10 (inicializacao_variaveis -> atribuicao .)


state 15

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 16

    (25) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 25 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 25 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 25 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 25 (declaracao_funcao -> tipo cabecalho .)


state 17

    (27) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (28) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo error

    ABRE_PAR        shift and go to state 20


state 18

    (8) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) declaracao_variaveis -> tipo DOIS_PONTOS . error
    (11) lista_variaveis -> . lista_variaveis VIRGULA var
    (12) lista_variaveis -> . var
    (13) var -> . ID
    (14) var -> . ID indice

    error           shift and go to state 27
    ID              shift and go to state 24

    var                            shift and go to state 25
    lista_variaveis                shift and go to state 26

state 19

    (16) indice -> ABRE_COL . expressao FECHA_COL
    (18) indice -> ABRE_COL . error FECHA_COL
    (20) indice -> ABRE_COL . error
    (53) expressao -> . expressao_logica
    (54) expressao -> . atribuicao
    (55) expressao_logica -> . expressao_simples
    (56) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (49) atribuicao -> . var ATRIBUT expressao
    (57) expressao_simples -> . expressao_aditiva
    (58) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (13) var -> . ID
    (14) var -> . ID indice
    (59) expressao_aditiva -> . expressao_multiplicativa
    (60) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (61) expressao_multiplicativa -> . expressao_unaria
    (62) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (63) expressao_unaria -> . fator
    (64) expressao_unaria -> . operador_soma fator
    (65) expressao_unaria -> . operador_negacao fator
    (79) fator -> . ABRE_COL expressao FECHA_COL
    (80) fator -> . var
    (81) fator -> . chamada_funcao
    (82) fator -> . numero
    (72) operador_soma -> . SOMA
    (73) operador_soma -> . SUB
    (74) operador_negacao -> . NEGACAO
    (86) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (83) numero -> . INTEIRO
    (84) numero -> . FLUTUANTE
    (85) numero -> . NOTACAO_CIENTIFICA

    error           shift and go to state 36
    ID              shift and go to state 42
    ABRE_COL        shift and go to state 39
    SOMA            shift and go to state 33
    SUB             shift and go to state 34
    NEGACAO         shift and go to state 43
    INTEIRO         shift and go to state 41
    FLUTUANTE       shift and go to state 35
    NOTACAO_CIENTIFICA shift and go to state 38

    fator                          shift and go to state 28
    expressao_multiplicativa       shift and go to state 29
    operador_soma                  shift and go to state 30
    expressao_unaria               shift and go to state 31
    numero                         shift and go to state 32
    expressao_aditiva              shift and go to state 40
    expressao_simples              shift and go to state 45
    var                            shift and go to state 46
    expressao_logica               shift and go to state 37
    atribuicao                     shift and go to state 47
    expressao                      shift and go to state 48
    operador_negacao               shift and go to state 49
    chamada_funcao                 shift and go to state 44

state 20

    (27) cabecalho -> ID ABRE_PAR . lista_parametros FECHA_PAR corpo FIM
    (28) cabecalho -> ID ABRE_PAR . lista_parametros FECHA_PAR corpo error
    (29) lista_parametros -> . lista_parametros VIRGULA parametro
    (30) lista_parametros -> . parametro
    (31) lista_parametros -> . vazio
    (32) parametro -> . tipo DOIS_PONTOS ID
    (33) parametro -> . parametro ABRE_COL FECHA_COL
    (90) vazio -> .
    (23) tipo -> . INTEIRO
    (24) tipo -> . FLUTUANTE

    FECHA_PAR       reduce using rule 90 (vazio -> .)
    VIRGULA         reduce using rule 90 (vazio -> .)
    INTEIRO         shift and go to state 11
    FLUTUANTE       shift and go to state 10

    vazio                          shift and go to state 53
    parametro                      shift and go to state 50
    tipo                           shift and go to state 52
    lista_parametros               shift and go to state 51

state 21

    (14) var -> ID indice .
    (15) indice -> indice . ABRE_COL expressao FECHA_COL
    (17) indice -> indice . ABRE_COL error FECHA_COL
    (21) indice -> indice . error FECHA_COL
    (22) indice -> indice . ABRE_COL error

  ! shift/reduce conflict for ABRE_COL resolved as shift
  ! shift/reduce conflict for error resolved as shift
    ATRIBUT         reduce using rule 14 (var -> ID indice .)
    MULT            reduce using rule 14 (var -> ID indice .)
    DIVISAO         reduce using rule 14 (var -> ID indice .)
    SOMA            reduce using rule 14 (var -> ID indice .)
    SUB             reduce using rule 14 (var -> ID indice .)
    MENOR           reduce using rule 14 (var -> ID indice .)
    MAIOR           reduce using rule 14 (var -> ID indice .)
    IGUAL           reduce using rule 14 (var -> ID indice .)
    DIFERENCA       reduce using rule 14 (var -> ID indice .)
    MENOR_IGUAL     reduce using rule 14 (var -> ID indice .)
    MAIOR_IGUAL     reduce using rule 14 (var -> ID indice .)
    E_LOGICO        reduce using rule 14 (var -> ID indice .)
    OU_LOGICO       reduce using rule 14 (var -> ID indice .)
    FECHA_PAR       reduce using rule 14 (var -> ID indice .)
    FECHA_COL       reduce using rule 14 (var -> ID indice .)
    INTEIRO         reduce using rule 14 (var -> ID indice .)
    FLUTUANTE       reduce using rule 14 (var -> ID indice .)
    ID              reduce using rule 14 (var -> ID indice .)
    $end            reduce using rule 14 (var -> ID indice .)
    VIRGULA         reduce using rule 14 (var -> ID indice .)
    FIM             reduce using rule 14 (var -> ID indice .)
    SE              reduce using rule 14 (var -> ID indice .)
    REPITA          reduce using rule 14 (var -> ID indice .)
    LEIA            reduce using rule 14 (var -> ID indice .)
    ESCREVA         reduce using rule 14 (var -> ID indice .)
    RETORNA         reduce using rule 14 (var -> ID indice .)
    NEGACAO         reduce using rule 14 (var -> ID indice .)
    NOTACAO_CIENTIFICA reduce using rule 14 (var -> ID indice .)
    ENTAO           reduce using rule 14 (var -> ID indice .)
    ATE             reduce using rule 14 (var -> ID indice .)
    SENAO           reduce using rule 14 (var -> ID indice .)
    ABRE_COL        shift and go to state 54
    error           shift and go to state 55

  ! error           [ reduce using rule 14 (var -> ID indice .) ]
  ! ABRE_COL        [ reduce using rule 14 (var -> ID indice .) ]


state 22

    (19) indice -> error . FECHA_COL

    FECHA_COL       shift and go to state 56


state 23
